@startuml Proxy

title Proxy Pattern — StorageServiceProxy (Logging Proxy)

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ── Subject interface ──────────────────────────────────────────
interface IStorageService <<interface>> {
  + UploadFileAsync(filePath : string, remoteFileName : string, folderPath : string) : Task<bool>
  + CreateDirectoryAsync(folderPath : string) : Task<bool>
  + CheckConnectionAsync() : Task<bool>
}

' ── Proxy ──────────────────────────────────────────────────────
class StorageServiceProxy {
  - _inner : IStorageService
  - _logger : ILogger<StorageServiceProxy>
  + StorageServiceProxy(inner : IStorageService, logger : ILogger<StorageServiceProxy>)
  + UploadFileAsync(filePath : string, remoteFileName : string, folderPath : string) : Task<bool>
  + CreateDirectoryAsync(folderPath : string) : Task<bool>
  + CheckConnectionAsync() : Task<bool>
}

' ── Real Subjects ──────────────────────────────────────────────
class WebDavStorageService {
  + UploadFileAsync(...) : Task<bool>
  + CreateDirectoryAsync(...) : Task<bool>
  + CheckConnectionAsync() : Task<bool>
}

class SftpStorageService {
  + UploadFileAsync(...) : Task<bool>
  + CreateDirectoryAsync(...) : Task<bool>
  + CheckConnectionAsync() : Task<bool>
}

class SambaStorageService {
  + UploadFileAsync(...) : Task<bool>
  + CreateDirectoryAsync(...) : Task<bool>
  + CheckConnectionAsync() : Task<bool>
}

' ── Clients ────────────────────────────────────────────────────
class AudioLibraryStorage {
  # Storage : IStorageService
}

class TestUploadCommand {
  - _storageService : IStorageService
}

' Realization
StorageServiceProxy ..|> IStorageService : realizes
WebDavStorageService ..|> IStorageService : realizes
SftpStorageService ..|> IStorageService : realizes
SambaStorageService ..|> IStorageService : realizes

' Proxy wraps real subject
StorageServiceProxy --> IStorageService : _inner\n(delegates to real subject)

' Clients depend on IStorageService — unaware of proxy
AudioLibraryStorage --> IStorageService : Storage
TestUploadCommand --> IStorageService : _storageService

note top of StorageServiceProxy
  **Logging Proxy**
  Intercepts every call to IStorageService.
  Records operation name, result, and
  elapsed time via ILogger.
  Clients are unaware of the proxy —
  they receive it transparently via DI.
end note

note right of WebDavStorageService
  Real Subject
  (selected by Abstract Factory
   based on configuration)
end note

note bottom of AudioLibraryStorage
  Client
  Receives proxy as IStorageService
  via DI — no code change required.
end note

footer Proxy (Logging Proxy) · GoF Structural · NurFlac

@enduml
